# python-pwalk

./: CLAUDE.md  FINAL_SUCCESS.md  IMPLEMENTATION_STATUS.md  INSTALLATION_DEPENDENCIES.md  MULTITHREADING_SUCCESS.md  PERFORMANCE_OPTIMIZATIONS.md  PYPI_READY.md  QUICK_START.md  README.md  WHEEL_DISTRIBUTION_EXPLAINED.md  filesystem-reporting-tools  froster  pyproject.toml  python.walk.md  setup.py
.github/workflows/: build-wheels.yml  publish-pypi.yml  test.yml
benchmarks/: benchmark_vs_oswalk.py
docs/: C_EXTENSION_FIX.md  FINAL_PUSH_COMPLETE.md  GIL_FREE_STRATEGY.md  NEXT_STEP_CREATE_RELEASE.md  PYARROW_REMOVAL_SUMMARY.md  PYPI_PUBLISH_CHECKLIST.md  SIMPLIFIED_PACKAGE_SUMMARY.md
pwalk/: report.py  walk.py
src/pwalk_ext/: pwalk_core.c  pwalk_core_old.c
tests/: __init__.py  conftest.py
tests/integration/: test_report.py  test_walk_compatibility.py
tests/unit/: test_walk_basic.py
